--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,11 @@
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-
+  <script>
+    globalConfig={
+        theme:"default"
+    }
+  </script>
   <app-root></app-root>
 
 </body>
