--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-  <script type="module" src="http://localhost:3333/build/pskwebcomponents.esm.js"></script>
-  <script nomodule src="http://localhost:3333/build/pskwebcomponents.js"></script>
-
   <script type="module" src="/build/app.esm.js"></script>
   <script nomodule src="/build/app.js"></script>
 
-
-
-
   <link href="/build/app.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/main.css">
 
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
