--- a/src/pages/Controllers/index.html
+++ b/src/pages/Controllers/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
-Controllers help page
+<h1>Work in progress</h1>
+This is a simple external page that explains how controller works!
 </body>
 </html>
