--- a/src/pages/Themes/index.html
+++ b/src/pages/Themes/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
-Themes page
+<h1>Work in progress</h1>
+This is a simple external page that explains how you can build your own themes!
 </body>
 </html>
