--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,65 +1,80 @@
-<psk-page title="PrivateSky: A bridge between blockchains and cloud or enterprise software">
+<psk-page title = "PrivateSky: A bridge between blockchains and cloud or enterprise software">
 
-  <img src="PrivateSky/PrivateSky.png">
+  <img src = "PrivateSky/PrivateSky.png">
 
-  <psk-chapter title="Major technological innovations">
+  <psk-chapter title = "Major technological innovations">
+
+    <psk-chapter title = "Multi-Blockchain, Hierahical architecture">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = " Based with swarm communication and executable choreographies">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = "EDFS: Near-chain storage">
+
+
+    </psk-chapter>
+
+
+    <psk-chapter title = "Secret Smart Contracts">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = "Self-Sovereign Identities">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = "Self-Sovereign Applications">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = "Replace accounts with assets and transactions">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = "Optimised and privacy friendly approach for transaction validation">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = "New Consensus Agorithms">
+
+
+    </psk-chapter>
+
+    <psk-chapter title = "Lightweight Consensus Agorithms">
+
+
+    </psk-chapter>
 
 
   </psk-chapter >
 
-  <psk-chapter title="Architecture">
+
+  <psk-chapter title = "Development resources">
 
 
-  </psk-chapter>
-
-  <psk-chapter title=" PrivateSky developer map">
+    <psk-chapter title = "PrivateSky Installation">
 
 
-  </psk-chapter>
-
-  <psk-chapter title=" Swarm communication a prime explanantion ">
+    </psk-chapter>
 
 
-  </psk-chapter>
-
-  <psk-chapter title=" PrivateSky Installation">
+    <psk-chapter title = "Advanced Technical documentation">
 
 
+    </psk-chapter>
   </psk-chapter>
 
 
-  <psk-chapter title="Swarms examples">
-
-
-  </psk-chapter>
-
-
-  <div class='app-home'>
-    <h1>Welcome to PrivateSky Web Components</h1>
-
-
-    <div class="card-body">
-      Web Components are a set of features that provide a standard component model for the Web allowing for encapsulation and interoperability of individual HTML elements.
-
-      Primary technologies used to create them include:
-      <ul class="list-group">
-        <li class="list-group-item">Custom Elements – APIs to define new HTML elements</li>
-        <li class="list-group-item">Shadow DOM – Encapsulated DOM and styling, with composition</li>
-        <li class="list-group-item">HTML Templates, an HTML fragment is not rendered, but stored until it is instantiated via JavaScript</li>
-      </ul>
-      <footer class="blockquote-footer">Source:<cite title="Source Title">Wikipedia</cite></footer>
-    </div>
-
-    <p>You can use this starter app in order to build your own app using <b>Private Sky Custom Web Components</b>.
-    </p>
-    <p>You can checkout this app and private-sky webcomponents from GitHub.</p>
-    <p>
-      <a class="btn btn-primary" href="https://github.com/PrivateSky/pwc-apps" target="_blank">Checkout this app</a>
-      <a class="btn btn-primary" href="https://github.com/PrivateSky/pskwebcomponents" target="_blank">Checkout
-        psk-webcomponents</a>
-    </p>
-
-  </div>
 
 </psk-page >
 
