--- a/src/pages/PrivateSky/Installation.html
+++ b/src/pages/PrivateSky/Installation.html
@@ -1,12 +1,5 @@
-<psk-page title="page">
-  Example page
-  <psk-chapter title="title">
-
+<psk-page title="Page not available yet">
+  <psk-chapter title="Not available">
+    Page still not available. Wait until our team will complete this! If you believe that this is an error or you want to contribute, write an email to sinica@axiologic.net
   </psk-chapter>
-
-
-  <psk-chapter title="title">
-
-  </psk-chapter>
-
 </psk-page>
