--- a/src/pages/Tools/List.html
+++ b/src/pages/Tools/List.html
@@ -3,3 +3,4 @@
     Page still not available. Wait until our team will complete this! If you believe that this is an error or you want to contribute, write an email to sinica@axiologic.net
   </psk-chapter>
 </psk-page>
+CSBWizzard
