--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,11 +1,10 @@
 <psk-page title = "PrivateSky: A bridge between blockchains and cloud or enterprise software">
 
-  <img src = "PrivateSky/PrivateSky.png">
+    <psk-img src = "PrivateSky/PrivateSky.png" />
 
-  <psk-chapter title = "Major technological innovations">
+    <psk-toc></psk-toc>
 
-    <psk-chapter title = "Multi-Blockchain, Hierahical architecture">
-
+    <psk-chapter title="Major technological innovations">
 
     </psk-chapter>
 
