--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,8 +4,13 @@
 
     <psk-toc></psk-toc>
 
-    <psk-chapter title="Major technological innovations">
+    <psk-chapter title="#1 Major technological innovations">
 
+      <psk-chapter title="#2 Major technological innovations">
+          <psk-chapter title="#3  Major technological innovations">
+
+          </psk-chapter>
+      </psk-chapter>
     </psk-chapter>
 
     <psk-chapter title = " Based with swarm communication and executable choreographies">
