--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -31,7 +31,7 @@
     </psk-chapter>
   </psk-chapter>
 
-  <psk-chapter title=" Based with swarm communication and executable choreographies">
+  <!--<psk-chapter title=" Based with swarm communication and executable choreographies">
 
   </psk-chapter>
 
@@ -93,7 +93,7 @@
 
 
     </psk-chapter>
-  </psk-chapter>
+  </psk-chapter>-->
 
 
 </psk-page>
