--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,6 @@
 
     <psk-chapter title="#2 Major technological innovations">
 
-
       <psk-chapter title="#2.1 Major technological innovations">
         <psk-chapter title="#3.1  Major technological innovations">
 
@@ -20,13 +19,26 @@
       </psk-chapter>
 
       <psk-chapter title="#2.2 Major technological innovations">
+
         <psk-chapter title="#4.1  Major technological innovations">
 
-        </psk-chapter>
+          <psk-chapter title="#4.1.1  Major technological innovations">
 
+          </psk-chapter>
+
+          <psk-chapter title="#4.1.2  Major technological innovations">
+
+          </psk-chapter>
+
+          <psk-chapter title="#4.1.3  Major technological innovations">
+
+          </psk-chapter>
+
+        </psk-chapter>
         <psk-chapter title="#4.2  Major technological innovations">
 
         </psk-chapter>
+
       </psk-chapter>
     </psk-chapter>
   </psk-chapter>
