--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -43,7 +43,7 @@
     </psk-chapter>
   </psk-chapter>
 
-  <!--<psk-chapter title=" Based with swarm communication and executable choreographies">
+  <psk-chapter title=" Based with swarm communication and executable choreographies">
 
   </psk-chapter>
 
@@ -105,7 +105,7 @@
 
 
     </psk-chapter>
-  </psk-chapter>-->
+  </psk-chapter>
 
 
 </psk-page>
