--- a/src/pages/PrivateSky/Architecture.html
+++ b/src/pages/PrivateSky/Architecture.html
@@ -1,5 +1,5 @@
 <psk-page>
-  <img src="PrivateSky/Architecture.png">
+  <psk-img src="PrivateSky/Architecture.png">
   PrivateSky perspective for a typical blockchain architecture is summarized in the above picture. We have identified 5 layers in the architecture as will be described below. We see the architecture layers as types of concerns that are reflected in the system quality attributes.
 
   <psk-chapter title="Networking Layer">
