--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,6 @@
 <psk-page title="PrivateSky: A bridge between blockchains and cloud or enterprise software">
 
-  <psk-img src="PrivateSky/PrivateSky.png"/>
+  <psk-img src="PrivateSky/PrivateSky.png"></psk-img>
 
   <psk-toc></psk-toc>
 
