improvements for texts

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,50 +1,19 @@
-<psk-page title="PrivateSky: A bridge between blockchains and cloud or enterprise software">
+<psk-page title="PrivateSky: blockchains for the next WEB ">
 
   <psk-img src="PrivateSky/PrivateSky.png"></psk-img>
 
   <psk-toc></psk-toc>
 
-  <psk-chapter title="#1 Major technological innovations">
+  <psk-chapter title="Intergration and blockchains using swarm communication and executable choreographies">
+    PrivateSky's open-source platform allows the creation of backend or integration layers (like ESBs - Enterprise Service Buses) for cloud and enterprise application.
+    PrivateSky offers a microservices oriented architecture where the microservices composability (orchestration and executable choreographies) is delegated to a "software glue" called swarms (or swarm communication).
+    PrivateSky is also a platform to build decentralized/distributed applications that use blockchain: Distributed Applications - DApps, diverse types of Blockchain Applications, Consortium / Private Distributed Ledgers.
 
-    <psk-chapter title="#2 Major technological innovations">
+    The major innovations from PrivateSky are related to swarm communication (an improvement over Object Oriented Programming), blockchain and creation of performant methods of storing and handling private and confidential data.
+    An important concern for PrivateSky is to create technologies that enable privacy and confidentiality by default.
 
-      <psk-chapter title="#2.1 Major technological innovations">
-        <psk-chapter title="#2.1.1  Major technological innovations">
-
-        </psk-chapter>
-
-        <psk-chapter title="#2.1.2  Major technological innovations">
-
-        </psk-chapter>
-      </psk-chapter>
-
-      <psk-chapter title="#2.2 Major technological innovations">
-
-        <psk-chapter title="#2.2.1  Major technological innovations">
-
-          <psk-chapter title="#2.2.1.1  Major technological innovations">
-
-          </psk-chapter>
-
-          <psk-chapter title="#2.2.1.2  Major technological innovations">
-
-          </psk-chapter>
-
-          <psk-chapter title="#2.2.1.3  Major technological innovations">
-
-          </psk-chapter>
-
-        </psk-chapter>
-        <psk-chapter title="#2.2.2  Major technological innovations">
-
-        </psk-chapter>
-
-      </psk-chapter>
-    </psk-chapter>
-  </psk-chapter>
-
-  <psk-chapter title=" Based with swarm communication and executable choreographies">
-
+    For a quick understanding of the swarm communication set we suggest our article <a> href ="https://privatesky.xyz/PrivateSky/Swarms%20Explained" > Swarm communication explained</a>
+    Links to the descriptions of the major PrivateSky innovation can be found bellow.
   </psk-chapter>
 
   <psk-chapter title="EDFS: Near-chain storage">
