--- a/src/pages/PrivateSky/Swarms.html
+++ b/src/pages/PrivateSky/Swarms.html
@@ -1,5 +1,5 @@
-<psk-page title="What is swarm communication">
-  <psk-chapter title="What is swarm Communication">
+<psk-page title="What is swarm communication?">
+  <psk-chapter title="Technology neutral presentation of Swarm Communication">
     <p>
       Swarm communication is an concept introduced in 2013 in an article with title "Swarm Communication - a Messaging Pattern proposal for Dynamic Scalability in Cloud."[1]
       and extend and discussed in other articles regarding privacy and executable choreographies[2][3].
@@ -14,13 +14,13 @@
     </p>
     <ul>At an abstract level, understanding the execution model of swarms (both PrivateSky and SwarmESB) revolves around the following elements:
     <li>
-      Swarm description: Similar to the description of an object-oriented class, the description of a swarm comprises the descriptions of all phases, actions and variables of swarm.
-      Swarm variables are the way to represent the state of the swarm from the point of view of execution. The phases of the execution have a double role: they contain the code of actions
+      <b>Swarm descriptions</b>: Similar to the description of an object-oriented class, the description of a swarm comprises the descriptions of all <b>phases</b>, actions and variables of swarm.
+      Swarm <b>variables</b> are the way to represent the state of the swarm from the point of view of execution. The phases of the execution have a double role: they contain the code of actions
       that have the role of status, but also hold in the mental model of the programmer the name of the important state through which the process passes.
       The phases are represented in the code by functions and are physically found in the description of a swarm;
     </li>
     <li>
-      Swarm instances: From the perspective of the object-oriented programming, the instances of a swarm are just objects. But, an instance of a swarm is made up of a lot of cloned
+      <b>Swarm instances</b>: From the perspective of the object-oriented programming, the instances of a swarm are just objects. But, an instance of a swarm is made up of a lot of cloned
       objects in the first instance that give identity to the entire collective instance. Basically, in a way, a swarm has two types of instances: as a local object immediately accessible
       and as a lot of objects (clones of the original object). Both perspectives are correct, but understanding and proper use require a slightly more difficult conceptualization.
       Most of the time the programmer thinks locally (which code should write for a certain phase) and then an instance is a single object.
@@ -30,9 +30,9 @@
       and complex behaviours. We are talking globally of a "collective" instancing of Swarm, as opposed to local instantiating that is individual. The instances can be seen, in the light of
       the metaphor of swarms in nature, like swarms of bees (a collective existence) consisting of individuals who visit physical locations to perform the necessary tasks at the swarm level;
     </li>
-    <li>The swarm primitive: signals that a swarm instance will clone itself and send the new clone to another place (another location) to perform certain calculations and remote actions;
+    <li>The <b>swarm</b> primitive: signals that a swarm instance will clone itself and send the new clone to another place (another location) to perform certain calculations and remote actions;
     </li>
-    <li> Locations - The locations are primitive elements of the model of execution and give the destination for the swarm instances (bees belonging to a swarm in the metaphorical perspective).
+    <li> <b>Locations</b> - The locations are primitive elements of the model of execution and give the destination for the swarm instances (bees belonging to a swarm in the metaphorical perspective).
       For obvious reasons, these will also be referred to using the term of security contexts.
     </li>
     </ul>
@@ -75,9 +75,6 @@
         Alboaie, Lenuta; Alboaie, Sinica; Panu, Andrei (2013-11). "Swarm Communication - A Messaging Pattern Proposal for Dynamic Scalability in Cloud". 2013 IEEE 10th International Conference on High Performance Computing and Communications & 2013 IEEE International Conference on Embedded and Ubiquitous Computing. IEEE. doi:10.1109/hpcc.and.euc.2013.277. ISBN 9780769550886.
       </li>
 
-      <li>
-        Alboaie, Lenuta; Alboaie, Sinica; Panu, Andrei (2013-11). "Swarm Communication - A Messaging Pattern Proposal for Dynamic Scalability in Cloud". 2013 IEEE 10th International Conference on High Performance Computing and Communications & 2013 IEEE International Conference on Embedded and Ubiquitous Computing. IEEE. doi:10.1109/hpcc.and.euc.2013.277. ISBN 9780769550886.
-      </li>
 
       <li>
         Alboaie, Sinica; Nita, Lucian; Stefanescu, Cipriana (2015-11). "Executable choreographies for medical systems integration and data leaks prevention". 2015 E-Health and Bioengineering Conference (EHB). IEEE. doi:10.1109/ehb.2015.7391612. ISBN 9781467375443.
@@ -86,16 +83,17 @@
       <li>
         Sînică, Alboaie (2019-10-11), A light, open source, ESB or message hub for node.js. Using the "swarm communication pattern": salboaie/SwarmESB, retrieved 2019-10-18
       </li>
-      <li>
 
-      </li>
-      "PrivateSky: Blockchains, Secret Smart Contracts and advanced privacy preserving integration (ESBs) using executable choreographies". GitHub. Retrieved 2019-10-18.
       <li>
+        "PrivateSky: Blockchains, Secret Smart Contracts and advanced privacy preserving integration (ESBs) using executable choreographies". GitHub. Retrieved 2019-10-18.
+      </li>
 
-      </li>
-      "Executable choreographies applied in OPERANDO / CSJM v.24, n.3 (72), 2016 / Ediţii / CSJM / Publicaţii / IMI". www.math.md. Retrieved 2019-10-18.
       <li>
-        Peltz, Chris (2003-10). "Web Services Orchestration and Choreography". Computer. 36 (10): 46–52. doi:10.1109/MC.2003.1236471. ISSN 0018-9162. Check date values in: |date= (help)
+        "Executable choreographies applied in OPERANDO / CSJM v.24, n.3 (72), 2016 / Ediţii / CSJM / Publicaţii / IMI". www.math.md. Retrieved 2019-10-18.
+      </li>
+
+      <li>
+        Peltz, Chris (2003-10). "Web Services Orchestration and Choreography". Computer. 36 (10): 46–52. doi:10.1109/MC.2003.1236471. ISSN 0018-9162.
       </li>
     </ol>
 
