--- a/src/pages/PrivateSky/Swarms.html
+++ b/src/pages/PrivateSky/Swarms.html
@@ -75,9 +75,12 @@
         Alboaie, Lenuta; Alboaie, Sinica; Panu, Andrei (2013-11). "Swarm Communication - A Messaging Pattern Proposal for Dynamic Scalability in Cloud". 2013 IEEE 10th International Conference on High Performance Computing and Communications & 2013 IEEE International Conference on Embedded and Ubiquitous Computing. IEEE. doi:10.1109/hpcc.and.euc.2013.277. ISBN 9780769550886.
       </li>
 
+      <li>
+        Lenuta Alboaie, Sînică Alboaie, and Tudor Barbu. Extending swarm communication to unify choreography and long-lived processes. At 23rd International Conference on Information Systems Development (ISD2014 Croatia), 2014.
+      </li>
 
       <li>
-        Alboaie, Sinica; Nita, Lucian; Stefanescu, Cipriana (2015-11). "Executable choreographies for medical systems integration and data leaks prevention". 2015 E-Health and Bioengineering Conference (EHB). IEEE. doi:10.1109/ehb.2015.7391612. ISBN 9781467375443.
+        Sînică Alboaie, Lenuta Alboaie, and Andrei Panu. Levels of Privacy for e-Health systems in the cloud era. At 24th International Conference on Information Systems Development. Harbin, China, August 25-27, 2015.
       </li>
 
       <li>
