--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,14 +18,14 @@
 
   <psk-chapter title="EDFS: Near-chain storage">
     The EDFS sub-project announcement and the near-chain concept is presented in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30, Toulon, France.
-    A presentation of the idea can be found here:  <a href ="https://privatesky.xyz/PrivateSky/Main%20Innovations" > Information about EDFS, BARs, CSBs</a>
+    A presentation of the idea can be found here:  <a href ="https://privatesky.xyz/#/PrivateSky/Main%20Innovations" > Information about EDFS, BARs, CSBs</a>
 
   </psk-chapter>
 
 
   <psk-chapter title="Secret Smart Contracts">
     The first public presentation of the secret smart contract  concept is published in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30, Toulon, France.
-    A short presentation of the concept can be found here:  <a href ="https://privatesky.xyz/PrivateSky/Main%20Innovations" > Secret Smart Contracts</a>
+    A short presentation of the concept can be found here:  <a href ="https://privatesky.xyz/#/PrivateSky/Main%20Innovations" > Secret Smart Contracts</a>
   </psk-chapter>
 
 
@@ -37,13 +37,13 @@
     Development
 
     We are working to write an publish a new  scientific articles on the concept of Self-Sovereign Applications.
-    A short presentation of the concept can be found here:  <a href ="https://privatesky.xyz/PrivateSky/Main%20Innovations" >Self-Sovereign Applications</a>
+    A short presentation of the concept can be found here:  <a href ="https://privatesky.xyz/#/PrivateSky/Main%20Innovations" >Self-Sovereign Applications</a>
 
   </psk-chapter>
 
   <psk-chapter title="Replace accounts with assets and transactions">
     We are working on publishing scientific articles on explaining how blockchain works in priavteSky and our optimised and privacy friendly approach for transaction validation.
-    The  preliminary texts  can be found here:  <a href ="https://privatesky.xyz/PrivateSky/Swarms%20Explained" > Assets and transactions blockchain model</a>
+    The  preliminary texts  can be found here:  <a href ="https://privatesky.xyz/#/PrivateSky/Swarms%20Explained" > Assets and transactions blockchain model</a>
 
   </psk-chapter>
 
@@ -67,7 +67,7 @@
       </psk-chapter>
 
       <psk-chapter title="Advanced Technical documentation">
-        The  preliminary texts  can be found here:  <a href ="https://privatesky.xyz/Adnaced" > Advanced Technical documentation</a>
+        The  preliminary texts  can be found here:  <a href ="https://privatesky.xyz/#/Development/Advanced" > Advanced Technical documentation</a>
       </psk-chapter>
   </psk-chapter>
 
