--- a/src/pages/PrivateSky/Innovations.html
+++ b/src/pages/PrivateSky/Innovations.html
@@ -1,5 +1,35 @@
-<psk-page title="Page not available yet">
-  <psk-chapter title="Not available">
-    Page still not available. Wait until our team will complete this! If you believe that this is an error or you want to contribute, write an email to sinica@axiologic.net
-  </psk-chapter>
+<psk-page title="PrivateSky Innovations">
+    <psk-chapter title="Innovative Blockchain Arhitecture">
+      A short presentation of blockchain arhitectures proposed by privateSky can be found here:  <a href ="https://privatesky.xyz/#/PrivateSky/Architecture" > Architecture for Blockchain</a>
+    </psk-chapter>
+
+    <psk-chapter title="Asset/transaction model">
+      Documentation about the assets/transactions model will be here
+    </psk-chapter>
+
+
+    <psk-chapter title="BAR file format">
+      Documentation about the BAR file format
+    </psk-chapter>
+
+    <psk-chapter title="CSB concept">
+      Documentation about the Cloud Safe Box (CSB) concept
+    </psk-chapter>
+
+    <psk-chapter title="EDFS sub-project">
+      Documentation about the EDFS (Encrypted Distributed File System)
+    </psk-chapter>
+
+
+    <psk-chapter title="Secret Smart Contracts">
+      Documentation about the Secret Smart Contracts
+    </psk-chapter>
+
+    <psk-chapter title="Self-Sovereign Applications">
+      Documentation about the Self-Sovereign Applications
+    </psk-chapter>
+
+    <psk-chapter title="OBFT consensus algoritm">
+      Documentation about the OBFT consensus algoritm
+    </psk-chapter>
 </psk-page>
