--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,7 +12,7 @@
     The major innovations from PrivateSky are related to swarm communication (an improvement over Object Oriented Programming), blockchain and creation of performant methods of storing and handling private and confidential data.
     An important concern for PrivateSky is to create technologies that enable privacy and confidentiality by default.
 
-    For a quick understanding of the swarm communication set we suggest our article <a href ="https://privatesky.xyz/PrivateSky/Swarms%20Explained" > Swarm communication explained</a>
+    For a quick understanding of the swarm communication set we suggest our article <a href="https://privatesky.xyz/#/PrivateSky/Swarms%20Explained"> Swarm communication explained</a>
     Links to the descriptions of the major PrivateSky innovation and resources for developers can be found bellow.
   </psk-chapter>
 
