--- a/src/pages/PrivateSky/Innovations.html
+++ b/src/pages/PrivateSky/Innovations.html
@@ -4,7 +4,8 @@
     </psk-chapter>
 
   <psk-chapter title="EDFS sub-project">
-    <psk-image src="PrivateSky/EDFS.png"/>
+
+     <psk-img src="PrivateSky/EDFS.png" title="Relation between the EDFS major concepts"/>
 
      PrivateSky efforts to offer to create a database for storing private data conducted us to propose the  EDFS (Encrypted Distributed File System) that is both a file system and a blockchain based distributed database.
     The main purpose of EDFS is to serve as near-chain (off-chain) storage for blockchains.
@@ -33,7 +34,7 @@
 
       For storing those Bricks, we have created the EDFS storage service but we plan to have similar storages that are using various cloud storages (Dropbox , Google Drive, Amazon S3,IPFS, etc)
 
-      <ol>
+      <ul>
         Therefore a BAR is:
         <li>
           An archive storable in cloud as Bricks
@@ -49,18 +50,17 @@
         <li>
           Retrievable from cloud by a SEED
         </li>
-      </ol>
+      </ul>
 
 
     </psk-chapter>
 
     <psk-chapter title="CSB concept">
-      <ol>
+      <ul>
         A CSB (Cloud Safe Box) is a BAR archive conatining
         <li> An embedded ledger (a blockchain as  chained history of transaction grouped in blocks) </li>
         <li> Constitution (code) </li>
-        <li> </li>
-      </ol>
+      </ul>
 
       </div>
       All the embedded files are reflected by records in blockchain (called assets).
