--- a/src/pages/PrivateSky/Innovations.html
+++ b/src/pages/PrivateSky/Innovations.html
@@ -4,7 +4,7 @@
     </psk-chapter>
 
   <psk-chapter title="EDFS sub-project">
-
+     <a href="#ancora">Click pe ancora</a>
     <psk-img src="PrivateSky/EDFS.png" title="Relation between the EDFS major concepts"></psk-img>
 
      PrivateSky efforts to offer to create a database for storing private data conducted us to propose the  EDFS (Encrypted Distributed File System) that is both a file system and a blockchain based distributed database.
@@ -137,6 +137,7 @@
     </psk-chapter>
 
   </psk-chapter>
+  <div id="ancora">content</div>
 
 
 </psk-page>
