--- a/src/pages/PrivateSky/Innovations.html
+++ b/src/pages/PrivateSky/Innovations.html
@@ -126,6 +126,10 @@
       Documentation about the assets/transactions model will be here
     </psk-chapter>
 
+    <psk-chapter title="Encrypted Choregraphies security model">
+      Under the concept of "Encrypted Choregraphies" we propose a general model for handling cryptography primitives in swarms in general. <a href="/#/Development/Encrypted%20Choreographies">Detailed descriptions the implementation of Encrypted Choregraphies </a>
+    </psk-chapter>
+
     <psk-chapter title="OBFT consensus algorithm">
        OBFT consensus algorithm will be described here.
     </psk-chapter>
