--- a/src/pages/Development/EncryptedChoreographies.html
+++ b/src/pages/Development/EncryptedChoreographies.html
@@ -1,5 +1,5 @@
 <psk-page title="SecurityContext: Encryption in PrivateSky for encrypted choreographies">
-  <psk-chapter title="Not available">
+  <psk-chapter title="Concepts">
     We proposed the concept of encrypted choreographies as a method to make easy to use cryptography methods with swarms communication.
 
     <ol>
@@ -25,8 +25,13 @@
       <li> EncryptedSecret type contains a JSON {encryptedText, agentId } </li>
       <li> readList type: is an array of encrypted secrets (as EncryptedSecret type)  </li>
       <li> writeList type is an array with agent identities (as strings) </li>
-      <li> Declarations of the secure blocks in swarm descriptions (te be explained)</li>
+      <li> Declarations of the secure blocks in swarm descriptions</li>
     </ol>
 
+  </psk-chapter>
+
+
+  <psk-chapter title="Secure blocks in swarm descriptions">
+    To be explained
   </psk-chapter>
 </psk-page>
