--- a/src/pages/Development/EncryptedChoreographies.html
+++ b/src/pages/Development/EncryptedChoreographies.html
@@ -16,7 +16,7 @@
             </li>
 
             <li>
-              generateSecret(): returns an EncryptedSecret instance that contains an encrypted text and the agent that generated the text
+              generateRandom(len): returns a buffer of random bytes of size len
             </li>
 
             <li>
