--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
 <body>
   <script>
     globalConfig={
-        theme:"default"
+        theme:"default",
+        pagesBasePath:"https://raw.githubusercontent.com/PrivateSky/pwc-apps/master/pages/"
     }
   </script>
   <app-root></app-root>
