--- a/pages/Development/EncryptedChoreographies.html
+++ b/pages/Development/EncryptedChoreographies.html
@@ -12,7 +12,11 @@
             </li>
 
             <li>
-              getSecret(readList, callback): returns a plain test secret extracted from the readList, assuming that the Security Context has access to a private key with witch the secret was encrypted
+              getSecret(readList, callback): returns a plain text secret extracted from the readList, assuming that the Security Context has access to a private key with witch the secret was encrypted
+            </li>
+            
+             <li>
+              shareSecret(secret, list): returns an array of EncryptedSecret elements where each EncryptedSecret contains the secret encrypted with the public key of the agent whose id is specified in list 
             </li>
 
             <li>
@@ -22,6 +26,10 @@
             <li>
               sign(digest, writeList, [all,] callback): returns a PSkSignature instance that contains a signature for the digest signed by the first agent known to current security Context.
               If the 'all' argument is true than sign returns an array of PSkSignature objects for all the known agents of the current Security Context.
+            </li>
+            
+            <li>
+             verify(pskSignature): returns true if the signature is verifiable using the private key of the agent having the id pskSignature.agentId and false otherwise
             </li>
           </ul>
       </li>
