updated homepage and docs with the new component - psk-link

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,19 +9,23 @@
         (orchestration and executable choreographies) is delegated to a "software glue" called swarms (or swarm communication). PrivateSky is also a platform to build decentralized/distributed applications that use blockchain: Distributed Applications
         - DApps, diverse types of Blockchain Applications, Consortium / Private Distributed Ledgers. The major innovations from PrivateSky are related to swarm communication (an improvement over Object Oriented Programming), blockchain and creation of
         performant methods of storing and handling private and confidential data. An important concern for PrivateSky is to create technologies that enable privacy and confidentiality by default. For a quick understanding of the swarm communication set
-        we suggest our article <a href="https://privatesky.xyz/#/PrivateSky/Swarms%20Explained"> Swarm communication explained</a> Links to the descriptions of the major PrivateSky innovation and resources for developers can be found bellow.
+        we suggest our article
+        <psk-link page="PrivateSky/Swarms Explained"> Swarm communication explained</psk-link>
+        Links to the descriptions of the major PrivateSky innovation and resources for developers can be found bellow.
     </psk-chapter>
 
     <psk-chapter title="EDFS: Near-chain storage">
         The EDFS sub-project announcement and the near-chain concept is presented in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30, Toulon,
-        France. A presentation of the idea can be found here: <a href="https://privatesky.xyz/#/PrivateSky/Main%20Innovations"> Information about EDFS, BARs, CSBs</a>
+        France. A presentation of the idea can be found here:
+        <psk-link page="privatesky/main innovations">Information about EDFS, BARs, CSBs</psk-link>
 
     </psk-chapter>
 
 
     <psk-chapter title="Secret Smart Contracts">
         The first public presentation of the secret smart contract concept is published in the article: <i>Secret Smart Contracts in Hierarchical Blockchains</i>. In 28th International Conference on Information Systems Development (ISD2019), August 28-30,
-        Toulon, France. A short presentation of the concept can be found here: <a href="https://privatesky.xyz/#/PrivateSky/Main%20Innovations"> Secret Smart Contracts</a>
+        Toulon, France. A short presentation of the concept can be found here:
+        <psk-link page="privatesky/main innovations">Secret Smart Contracts</psk-link>
     </psk-chapter>
 
 
@@ -30,7 +34,8 @@
         Our preliminary work on Self-Sovereignithy was published in two articles <i>“Private Data System enabling Self-Sovereign Storage managed by Executable Choreographies”</i>, DAIS 2017 - 17th IFIP International Conference on Distributed Applications
         and Interoperable Systems, Neuchâtel, Switzerland,June 2017 and
         <i>"Towards a smart society through personal assistants employing executable choreographies" </i>, ISD 2017, 6-8 Sep 2017 26th International Conference on Information Systems Development We are working to write an publish a new scientific articles
-        on the concept of Self-Sovereign Applications. A short presentation of the concept can be found here: <a href="https://privatesky.xyz/#/PrivateSky/Main%20Innovations">Self-Sovereign Applications</a>
+        on the concept of Self-Sovereign Applications. A short presentation of the concept can be found here:
+        <psk-link page="privatesky/main innovations">Self-Sovereign Applications</psk-link>
 
     </psk-chapter>
 
