--- a/pages/index.html
+++ b/pages/index.html
@@ -64,7 +64,8 @@
         </psk-chapter>
 
         <psk-chapter title="Advanced Technical documentation">
-            The preliminary texts can be found here: <a href="https://privatesky.xyz/#/Development/Advanced"> Advanced Technical documentation</a>
+            The preliminary texts can be found here:
+            <psk-link page="Development/Advanced"> Advanced Technical documentation</psk-link>
         </psk-chapter>
     </psk-chapter>
 
