--- a/pages/index.html
+++ b/pages/index.html
@@ -68,6 +68,13 @@
             <psk-link page="Development/Advanced"> Advanced Technical documentation</psk-link>
         </psk-chapter>
     </psk-chapter>
+  
+  
+                                    <psk-list>
+                                        This property tells the component what to do with the uploaded files.
+                                        If this property is missing, then nothing will happen with the uploaded files.
+                                        A hint message will be displayed for the user, to know that a controller for the component is not set.
+                                    </psk-list>
 
 
 </psk-page>
