testing psk-list

--- a/pages/index.html
+++ b/pages/index.html
@@ -64,40 +64,35 @@
             <psk-link page="Development/Advanced"> Advanced Technical documentation</psk-link>
         </psk-chapter>
     </psk-chapter>
-  
-  <psk-list>
-                1A hint message will be displayed for the user, to know that a controller for the component is not set.
-                1A hint message will be displayed for the user, to know that a controller for the component is not set.
-                1A hint message will be displayed for the user, to know that a controller for the component is not set.
-                1A hint message will be displayed for the user, to know that a controller for the component is not set.
-                <psk-card>
-                    55A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                </psk-card>
-                <p>This property tells the component what to do with the uploaded files.</p>
-                2A hint message will be displayed for the user, to know that a controller for the component is not set.
-                2A hint message will be displayed for the user, to know that a controller for the component is not set.
-                2A hint message will be displayed for the user, to know that a controller for the component is not set.
-                2A hint message will be displayed for the user, to know that a controller for the component is not set.
-                <p>If this property is missing, then nothing will happen with the uploaded files.</p>
-                <psk-card>
-                    55A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                </psk-card>
-                4A hint message will be displayed for the user, to know that a controller for the component is not set.
-               4 A hint message will be displayed for the user, to know that a controller for the component is not set.
-               4 A hint message will be displayed for the user, to know that a controller for the component is not set.
-               4 A hint message will be displayed for the user, to know that a controller for the component is not set.
-                <psk-card>
-                    55A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                    551A hint message will be displayed for the user, to know that a controller for the component is not set.
-                </psk-card>
-            </psk-list>
 
+    <psk-list>
+        1A hint message will be displayed for the user, to know that a controller for the component is not set. 1A hint message will be displayed for the user, to know that a controller for the component is not set. 1A hint message will be displayed for the user,
+        to know that a controller for the component is not set. 1A hint message will be displayed for the user, to know that a controller for the component is not set.
+        <psk-card>
+            55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
+            the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+        </psk-card>
+        <p>This property tells the component what to do with the uploaded files.</p>
+        2A hint message will be displayed for the user, to know that a controller for the component is not set. 2A hint message will be displayed for the user, to know that a controller for the component is not set.
+        <psk-list>
+            55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
+            the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+        </psk-list>
+        2A hint message will be displayed for the user, to know that a controller for the component is not set. 2A hint message will be displayed for the user, to know that a controller for the component is not set.
+        <p>If this property is missing, then nothing will happen with the uploaded files.</p>
+        4A hint message will be displayed for the user, to know that a controller for the component is not set. 4 A hint message will be displayed for the user, to know that a controller for the component is not set.
+        <psk-list>
+            55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+            <psk-list>
+                55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
+                the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+            </psk-list>
+            551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+        </psk-list>
+        4 A hint message will be displayed for the user, to know that a controller for the component is not set. 4 A hint message will be displayed for the user, to know that a controller for the component is not set.
+        <psk-card>
+            55A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set. 551A hint message will be displayed for
+            the user, to know that a controller for the component is not set. 551A hint message will be displayed for the user, to know that a controller for the component is not set.
+        </psk-card>
+    </psk-list>
 </psk-page>
